--- a/frontend/src/styles/randomNumber.module.css
+++ b/frontend/src/styles/randomNumber.module.css
@@ -59,7 +59,7 @@
 /* Responsive cho thiết bị di động */
 @media (max-width: 768px) {
   .circle {
-    width: 20px; /* Kích thước nhỏ hơn cho di động */
+    width: 14px; /* Kích thước nhỏ hơn cho di động */
     height: 20px; /* Kích thước nhỏ hơn cho di động */
     align-items: center;
     justify-content: center;
@@ -68,12 +68,19 @@
   .digit {
     font-size: 1rem; /* Kích thước chữ nhỏ hơn cho di động */
   }
+
+  .whiteText {
+    color: white;
+    font-size: 14px !important;
+    letter-spacing: 5px;
+    text-align: center;
+  }
 }
 
 /* Responsive cho các màn hình nhỏ hơn */
 @media (max-width: 480px) {
   .circle {
-    width: 15px; /* Kích thước rất nhỏ cho các thiết bị nhỏ hơn */
+    width: 11px; /* Kích thước rất nhỏ cho các thiết bị nhỏ hơn */
     height: 15px; /* Kích thước rất nhỏ cho các thiết bị nhỏ hơn */
   }
 
@@ -81,7 +88,16 @@
     font-size: 0.8rem; /* Kích thước chữ nhỏ hơn cho các thiết bị nhỏ hơn */
   }
 
+  .whiteText {
+    color: white;
+    font-size: 10px !important;
+    letter-spacing: 5px;
+    text-align: center;
+  }
+
   .digitWrapper {
     margin: 0 1px; /* Khoảng cách nhỏ hơn giữa các số trên thiết bị nhỏ */
   }
 }
+
+
