--- a/frontend/src/styles/randomNumber.module.css
+++ b/frontend/src/styles/randomNumber.module.css
@@ -70,6 +70,7 @@
   }
 
   .whiteText {
+    margin-left: 2px !important;
     color: white;
     font-size: 14px !important;
     letter-spacing: 5px;
@@ -89,6 +90,7 @@
   }
 
   .whiteText {
+    margin-left: 2px !important;
     color: white;
     font-size: 10px !important;
     letter-spacing: 5px;
