--- a/frontend/src/styles/randomNumber.module.css
+++ b/frontend/src/styles/randomNumber.module.css
@@ -66,7 +66,7 @@
   }
 
   .digit {
-    font-size: 1rem; /* Kích thước chữ nhỏ hơn cho di động */
+    font-size: 18px; /* Kích thước chữ nhỏ hơn cho di động */
   }
 
   .whiteText {
@@ -86,7 +86,7 @@
   }
 
   .digit {
-    font-size: 0.8rem; /* Kích thước chữ nhỏ hơn cho các thiết bị nhỏ hơn */
+    font-size: 14px; /* Kích thước chữ nhỏ hơn cho các thiết bị nhỏ hơn */
   }
 
   .whiteText {
