--- a/frontend/src/styles/prizeTable.css
+++ b/frontend/src/styles/prizeTable.css
@@ -101,10 +101,29 @@
 }
 
 
+/* Responsive cho thiết bị di động */
+@media (max-width: 768px) {
+    .prize-number {
+        font-size: 22px !important;
+    }
+    .color-red .prize-number {
+        font-size: 26px !important;
+    }
+    
+ }
+  
 @media (max-width: 480px) {
     .spinning-ball {
         width: 16px;
         height: 16px;
-    }  
+    }
+
+    .prize-number {
+        font-size: 18px !important;
+    }
+    
+    .color-red .prize-number {
+        font-size: 22px !important;
+    }
 }
   
