--- a/frontend/src/styles/randomNumber.module.css
+++ b/frontend/src/styles/randomNumber.module.css
@@ -19,7 +19,7 @@
   border-radius: 50%;
   z-index: 1; /* Đặt z-index để hình tròn nằm dưới chữ số */
   transition: opacity 0.3s ease; /* Thêm hiệu ứng chuyển tiếp */
-  margin-right: 1px;
+  margin-right: 3px;
 }
 
 /* Màu sắc */
@@ -74,15 +74,18 @@
  
 }
 
+.digitWrapperDone {
+  margin: 0; /* Khoảng cách nhỏ hơn giữa các số trên thiết bị nhỏ */
+}
+
 /* Responsive cho các màn hình nhỏ hơn */
 @media (max-width: 480px) {
-
-
-
-
-
   .digitWrapper {
     margin: 0 1px; /* Khoảng cách nhỏ hơn giữa các số trên thiết bị nhỏ */
+  }
+  
+  .digitWrapperDone {
+    margin: 0; /* Khoảng cách nhỏ hơn giữa các số trên thiết bị nhỏ */
   }
 }
 
